demo-cases/app/bjs-todo-api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bjs-web
  labels:
    app.kubernetes.io/part-of: bjs-todo-api
    demo: china-region-10-cases
