demo-cases/app/bjs-todo-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: bjs-web
  labels:
    app: todo-api
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
